--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "hardhat": "^2.12.4"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.0"
-  }
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "nodemon": "^3.1.4"
+  },
+  "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903"
 }
